# gi_messager

./: .gitignore  CMakeLists.txt  README.md
include/girakoo/: gi_messager.h
src/: gi_messager_linux.cpp
